--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lupton Irrigation</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="Description" content="Lupton Irrigation specializes in the installation and repair of sprinkler and landscape lighting in Austin, Texas.">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -50,7 +50,7 @@
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Contact Us</a>
         </div>
         <br><br>
 
@@ -98,18 +98,11 @@
 
 
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="./img/sprinkler.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="./img/lighting.jpg" alt="Ourdoor Lighting"></div>
   </div>
 
   <div class="container">
-    <div class="section">
+    <div id="Contact" class="section">
 
       <div class="row">
         <div class="col s12 center">
@@ -124,14 +117,7 @@
 
 
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="./img/sprinkler.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="./img/home-irrigation.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
