--- a/index.html
+++ b/index.html
@@ -26,30 +26,25 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+  <div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper white">
+            <div class="center black-text" style="font-size:xx-large">Lupton Irrigation 512-310-1914</div>
+        </div>
+    </nav>
+  </div>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
+      <br/>
       <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <img src="./img/logo.png" alt="Lupton Irrigation" >
+          <br/>
+          <span class="whiteborder black-text" style="vertical-align:top">IRRIGATION Co.</span>
         </div>
         <div class="row center">
-          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Contact Us</a>
+          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light green darken-3">Contact Us</a>
         </div>
         <br><br>
 
@@ -66,28 +61,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><i class="material-icons medium icon-green">home</i></h2>
+            <h5 class="center">Installation</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Lupton Irrigation is the Premier Irrigation Installer in Austin. With well over 100 years of combined irrigation knowledge on staff, there is not a situation that we have not already irrigated. Using Commercial Irrigation Parts from Hunter Industries, installed by the best installers in the market, we are more than confident in our product.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h2 class="center brown-text"><i class="material-icons medium icon-green">build</i></h2>
+            <h5 class="center">Repair</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Having a strong Repair Department is one of the Foundations of running a Service Business. At Lupton Irrigation, we are extremely proud of what we have to offer. Whether it is a simple damaged fitting or a complete remodel of an existing irrigation system, we have the knowledge and the staff available for any circumstance.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><i class="material-icons medium icon-green">highlight</i></h2>
+            <h5 class="center">Lighting</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Ask any landscape architect and they'll tell you that well chosen and situated outdoor lighting is essential to all-season enjoyment of your garden.</p>
           </div>
         </div>
       </div>
@@ -101,16 +96,17 @@
   </div>
 
   <div class="container">
-    <div id="Contact" class="section">
-
+    <div class="section">
       <div class="row">
         <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>Lupton Irrigation is a Design / Build 
+              Irrigation Company specializing in new 
+              installation and repair for all facets of irrigation.</h4>
+          <h5>
+              Call or email to schedule your sprinker and complete irrigation system installation.
+          </h5>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -122,35 +118,26 @@
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+        <div class="col s6">
+          <h5 class="white-text">Company Info</h5>
+          <p class="grey-text text-lighten-4">Whether you are looking to irrigate your home, office, farm or ranch, Lupton Irrigation is second to none. With more than 10 years in business, Lupton Irrigation has the expertise, knowledge, and capacity to handle any project - large or small.</p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+        <div class="col s6">
+          <h5 id="Contact" class="white-text">Contact Us</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li class="cbs"><i class="material-icons contact">phone</i><span>512-310-1914</span></li>
+            <li class="cbs"><i class="material-icons contact">location_on</i>Austin, TX</li>
+            <li class="cbs"><i class="material-icons contact">email</i>office@luptonirrigation.com</li>
           </ul>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
+       
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+          <i>Lupton Irrigation operates under License Irrigator Number LI7589 Irrigation in Texas is regulated by the Texas Commission on Environmental Quality P.O. Box 13087, Austin, Texas 78711-3087 - www.tceq.state.tx.us.</i>
       </div>
     </div>
   </footer>
