Fixed nav header for mobile devices

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper white">
-            <div class="center black-text" style="font-size:xx-large">Lupton Irrigation 512-310-1914</div>
+            <div class="center black-text" style="font-size:x-large">Lupton Irrigation 512-310-1914</div>
         </div>
     </nav>
   </div>
