Google Lighthouse accessibility fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,7 @@
           <span class="whiteborder black-text" style="vertical-align:top">IRRIGATION Co.</span>
         </div>
         <div class="row center">
-          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light green darken-3">Contact Us</a>
+          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light teal darken-4">Contact Us</a>
         </div>
         <br><br>
 
@@ -112,10 +112,10 @@
 
 
   <div class="parallax-container valign-wrapper">
-    <div class="parallax"><img src="./img/home-irrigation.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="./img/home-irrigation.jpg" alt="Home Irrigation"></div>
   </div>
 
-  <footer class="page-footer teal">
+  <footer class="page-footer teal darken-4">
     <div class="container">
       <div class="row">
         <div class="col s6">
