Minify CSS and fix email

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Lupton Irrigation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="Description" content="Lupton Irrigation specializes in the installation and repair of sprinkler and landscape lighting in Austin, Texas.">
+  <meta name="Description"
+    content="Lupton Irrigation specializes in the installation and repair of sprinkler and landscape lighting in Austin, Texas.">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -14,9 +15,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main-min.css">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <meta name="theme-color" content="#fafafa">
 
 </head>
@@ -28,35 +29,33 @@
 
   <div class="navbar-fixed">
     <nav>
-        <div class="nav-wrapper white">
-            <div class="center black-text" style="font-size:x-large">Lupton Irrigation 512-310-1914</div>
-        </div>
+      <div class="nav-wrapper white">
+        <div class="center black-text" style="font-size:x-large">Lupton Irrigation 512-310-1914</div>
+      </div>
     </nav>
   </div>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
-      <br/>
+      <br />
       <div class="container">
         <div class="row center">
-          <img src="./img/logo.png" alt="Lupton Irrigation" >
-          <br/>
+          <img src="./img/logo.png" alt="Lupton Irrigation">
+          <br />
           <span class="whiteborder black-text" style="vertical-align:top">IRRIGATION Co.</span>
         </div>
         <div class="row center">
-          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light teal darken-4">Contact Us</a>
+          <a href="#Contact" id="download-button" class="btn-large waves-effect waves-light teal darken-4">Contact
+            Us</a>
         </div>
-        <br><br>
-
+        <br/><br/>
       </div>
     </div>
-    <div class="parallax"><img src="./img/sprinkler.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="./img/sprinkler.jpg" alt="Sprinkler"></div>
   </div>
-
 
   <div class="container">
     <div class="section">
-
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
@@ -64,7 +63,10 @@
             <h2 class="center brown-text"><i class="material-icons medium icon-green">home</i></h2>
             <h5 class="center">Installation</h5>
 
-            <p class="light">Lupton Irrigation is the Premier Irrigation Installer in Austin. With well over 100 years of combined irrigation knowledge on staff, there is not a situation that we have not already irrigated. Using Commercial Irrigation Parts from Hunter Industries, installed by the best installers in the market, we are more than confident in our product.</p>
+            <p class="light">Lupton Irrigation is the Premier Irrigation Installer in Austin. With well over 100 years
+              of combined irrigation knowledge on staff, there is not a situation that we have not already irrigated.
+              Using Commercial Irrigation Parts from Hunter Industries, installed by the best installers in the market,
+              we are more than confident in our product.</p>
           </div>
         </div>
 
@@ -73,7 +75,10 @@
             <h2 class="center brown-text"><i class="material-icons medium icon-green">build</i></h2>
             <h5 class="center">Repair</h5>
 
-            <p class="light">Having a strong Repair Department is one of the Foundations of running a Service Business. At Lupton Irrigation, we are extremely proud of what we have to offer. Whether it is a simple damaged fitting or a complete remodel of an existing irrigation system, we have the knowledge and the staff available for any circumstance.</p>
+            <p class="light">Having a strong Repair Department is one of the Foundations of running a Service Business.
+              At Lupton Irrigation, we are extremely proud of what we have to offer. Whether it is a simple damaged
+              fitting or a complete remodel of an existing irrigation system, we have the knowledge and the staff
+              available for any circumstance.</p>
           </div>
         </div>
 
@@ -82,7 +87,8 @@
             <h2 class="center brown-text"><i class="material-icons medium icon-green">highlight</i></h2>
             <h5 class="center">Lighting</h5>
 
-            <p class="light">Ask any landscape architect and they'll tell you that well chosen and situated outdoor lighting is essential to all-season enjoyment of your garden.</p>
+            <p class="light">Ask any landscape architect and they'll tell you that well chosen and situated outdoor
+              lighting is essential to all-season enjoyment of your garden.</p>
           </div>
         </div>
       </div>
@@ -99,17 +105,16 @@
     <div class="section">
       <div class="row">
         <div class="col s12 center">
-          <h4>Lupton Irrigation is a Design / Build 
-              Irrigation Company specializing in new 
-              installation and repair for all facets of irrigation.</h4>
+          <h4>Lupton Irrigation is a Design / Build
+            Irrigation Company specializing in new
+            installation and repair for all facets of irrigation.</h4>
           <h5>
-              Call or email to schedule your sprinker and complete irrigation system installation.
+            Call or email to schedule your sprinker and complete irrigation system installation.
           </h5>
         </div>
       </div>
     </div>
   </div>
-
 
   <div class="parallax-container valign-wrapper">
     <div class="parallax"><img src="./img/home-irrigation.jpg" alt="Home Irrigation"></div>
@@ -118,42 +123,53 @@
   <footer class="page-footer teal darken-4">
     <div class="container">
       <div class="row">
-        <div class="col s6">
+        <div class="col l6 s12">
           <h5 class="white-text">Company Info</h5>
-          <p class="grey-text text-lighten-4">Whether you are looking to irrigate your home, office, farm or ranch, Lupton Irrigation is second to none. With more than 10 years in business, Lupton Irrigation has the expertise, knowledge, and capacity to handle any project - large or small.</p>
-
+          <p class="grey-text text-lighten-4">Whether you are looking to irrigate your home, office, farm or ranch,
+            Lupton Irrigation is second to none. With more than 10 years in business, Lupton Irrigation has the
+            expertise, knowledge, and capacity to handle any project - large or small.</p>
 
         </div>
-        <div class="col s6">
+        <div class="col l6 s12">
           <h5 id="Contact" class="white-text">Contact Us</h5>
           <ul>
             <li class="cbs"><i class="material-icons contact">phone</i><span>512-310-1914</span></li>
             <li class="cbs"><i class="material-icons contact">location_on</i>Austin, TX</li>
-            <li class="cbs"><i class="material-icons contact">email</i>office@luptonirrigation.com</li>
+            <li class="cbs"><i class="material-icons contact">email</i><a style="color: white" href="mailto://office@luptonirrigation.com">office@luptonirrigation.com</a></li>
           </ul>
         </div>
-       
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-          <i>Lupton Irrigation operates under License Irrigator Number LI7589 Irrigation in Texas is regulated by the Texas Commission on Environmental Quality P.O. Box 13087, Austin, Texas 78711-3087 - www.tceq.state.tx.us.</i>
+        <i>Lupton Irrigation operates under License Irrigator Number LI7589 Irrigation in Texas is regulated by the
+          Texas Commission on Environmental Quality P.O. Box 13087, Austin, Texas 78711-3087 - www.tceq.state.tx.us.</i>
       </div>
     </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
+  </script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script type="text/javascript" src="js/vendor/materialize.min.js"></script>
   <script src="js/init.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <!-- Pending Google Analytics: change UA-XXXXX-Y to site's ID. -->
   <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+    window.ga = function () {
+      ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('set', 'transport', 'beacon');
+    ga('send', 'pageview')
+
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
