--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper white">
-        <div class="center black-text" style="font-size:x-large">Lupton Irrigation 512-310-1914</div>
+        <div class="center black-text show-on-med-and-down hide-on-small-and-down" style="font-size:xx-large">Lupton Irrigation 512-310-1914</div>
+        <div class="center black-text hide-on-med-and-up" style="font-size:large"><strong>Lupton Irrigation 512-310-1914</strong></div>
       </div>
     </nav>
   </div>
