--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        <i>Lupton Irrigation operates under License Irrigator Number LI7589 Irrigation in Texas is regulated by the
+        <i>Lupton Irrigation operates under Licensed Irrigator Number LI7589 Irrigation in Texas is regulated by the
           Texas Commission on Environmental Quality P.O. Box 13087, Austin, Texas 78711-3087 - www.tceq.state.tx.us.</i>
       </div>
     </div>
