Better link tagging

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         <div class="col l6 s12">
           <h5 id="Contact" class="white-text">Contact Us</h5>
           <ul>
-            <li class="cbs"><i class="material-icons contact">phone</i><span>512-310-1914</span></li>
-            <li class="cbs"><i class="material-icons contact">location_on</i>Austin, TX</li>
-            <li class="cbs"><i class="material-icons contact">email</i><a style="color: white" href="mailto://office@luptonirrigation.com">office@luptonirrigation.com</a></li>
+            <li class="cbs"><a style="color: white" href="tel:+15123101914"><i class="material-icons contact">phone</i><span>512-310-1914</span></a></li>
+            <li class="cbs"><a style="color: white" href="https://goo.gl/maps/pgc5sup58DWg6NmE8"><i class="material-icons contact">location_on</i>Austin, TX</a></li>
+            <li class="cbs"><a style="color: white" href="mailto:office@luptonirrigation.com"><i class="material-icons contact">email</i>office@luptonirrigation.com</a></li>
           </ul>
         </div>
       </div>
